--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <option value="01">01. Sammansatt redovisning (sit.plan, samord.ritn).</option>
   </optgroup>
   
-  <optgroup label="Rumsbildning">
+  <optgroup label="Rumsbildning (A)">
     <option value="40">40. Sammansatt redovisning</option>
     <option value="41">41. Yttertak och ytterbjälklag</option>
     <option value="42">42. Yttervägg</option>
@@ -176,7 +176,7 @@
     <option value="49">49. Övrigt</option>
   </optgroup>
   
-  <optgroup label="VA, VVS, Kyla">
+  <optgroup label="VA, VVS, Kyla (V)">
     <option value="50">50. Sammansatt redovisning</option>
     <option value="51">51. VA m.m. i mark utanför husYttertak och ytterbjälklag</option>
     <option value="52">52. Försörjningssystem</option>
