--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <style type="text/css">
   html, body, input, button, select, label, legend {
     font-size: 14px;
-    font-family: 'Roboto Mono', 'Source Code Pro', 'Open Sans', sans-serif;
+    font-family: 'Roboto Mono', sans-serif;
 
   }
 
@@ -130,8 +130,8 @@
 <body>
 <div class="container" style="margin-top: 60px;">
 <h3>Ritningsnamngivning</h3>
-<p>Det här är ett webbverktyg för att underlätta ritningsnamngivning. Ritningsnamnet uppdateras automatiskt när du gör ändringar i formuläret. Tänk på att olika företag och konsulter ibland utformar sina egna system för ritningsnamngivning.</p>
-<p><strong>2016-06-15</strong> Bugg: Om varken hus, plan eller löpnummer angetts så avslutas ritningsnamnet med '-'.</p>
+<p>Det här är ett webbverktyg för att underlätta ritningsnamngivning. Ritningsnamnet uppdateras automatiskt när formuläret ändras.</p>
+<p><strong>2016-06-15</strong>Bugg: Om varken hus, plan eller löpnummer angetts så avslutas ritningsnamnet med '-'.</p>
 <hr />
 
 <fieldset>
@@ -284,7 +284,8 @@
 </form>
 </fieldset>
 <hr />
-<p style="color: #666;">💡 <a href="https://github.com/pbeck/ritningsnamn-sis">Mera information på GitHub</a> &middot; 🔨&nbsp;Byggt av <a href="http://beckmancreative.se">Pelle Beckman</a></p>
+<p style="color: #666;">💡 <a href="https://github.com/pbeck/ritningsnamn-sis">Mera information på GitHub</a> &middot;
+🔨&nbsp;Byggt av <a href="http://beckmancreative.se">Pelle Beckman</a> &middot; 🔥 Buggar? <a href="mailto:pelle@beckmancreative.se">pelle@beckmancreative.se</a></a></p>
 
 </div> <!-- // container -->
 </body>
